syntax = "proto3";

option java_package = "lab.solva.user.transaction";
option java_multiple_files = true;

message ExchangeInfoProto {
  string resource = 1;
  string request_date = 2;
  repeated ExchangeRateProto exchange_rates = 3;
}

message ExchangeRateProto {
  string currency_name = 1;
  string currency_code = 2;
  double exchange_rate = 3;
}

service ExchangeService {
  rpc gettingRates (ExchangeInfoRequest) returns (ExchangeInfoResponse);
}

message ExchangeInfoRequest {

}

message ExchangeInfoResponse {
  ExchangeInfoProto exchangeInfo = 1;
}
